<resources>
    <string name="app_name">SubmissionAkhirIntermediate</string>

    <string name="hint" translatable="false"> </string>
    <string name="imgaddstory">Image Add Story</string>
    <string name="camerax">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="enter_photo_description">Enter Photo Description</string>
    <string name="upload">Upload</string>
    <string name="take_photo">Take Photo</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="image_story">Image Story</string>
    <string name="name">Name</string>
    <string name="photo_description">Photo Description</string>
    <string name="theme">Theme</string>
    <string name="img_logo">Image Logo</string>
    <string name="log_in_to_your_account">Log In to your account</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="create_new_account">Create new account</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="add_story">Add Story</string>
    <string name="no_data">No Data</string>
    <string name="empty_story_data">Empty Story Data</string>
    <string name="let_s_add_story_data_in_the_add_menu_section">Let\'s Add Story data in the Add Menu Section</string>
    <string name="create_an_account">Create an account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="day_mode_or_night_mode">Day Mode or Night Mode</string>
    <string name="logosplashscreen">Logo Splash Screen</string>
    <string name="iv_logo">Image Logo</string>
    <string name="welcome_to_the_story_app">Welcome To The Story App</string>
    <string name="this_application_displays_a_list_of_stories_from_friends_who_are_studying_and_graduating_from_dicoding">This application displays a list of stories from friends who are studying and graduating from Dicoding.</string>
    <string name="continuee">Continue</string>
    <string name="log_out">Log Out</string>
    <string name="_2023_dicoding_x_idcamp">2023 Dicoding X IdCamp</string>

    <string name="tidak_mendapatkan_permission.">Did not get camera access permission</string>
    <string name="upload_success">Upload Success</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camerax">Open Camera X</string>
    <string name="add_loc">Add Location</string>
    <string name="maps">Maps</string>
    <string name="change_language">Change Language</string>

    <string name="story_dicoding">Dicoding Story</string>
    <string name="add_button_click">Add Story button</string>
    <string name="setting_button_click">Settings button</string>

    <string name="berhasil_mengambil_gambar">Managed to take a picture</string>
    <string name="gagal_mengambil_gambar">Failed to take a picture</string>
    <string name="gagal_memunculkan_kamera">Failed to bring up the camera</string>

    <string name="detail_story"> Story Details</string>

    <string name="welcome">Welcome</string>
    <string name="gagal_log_in">Login Failed</string>

    <string name="sukses_register">Registration Success</string>
    <string name="gagal_register">Registration Failed</string>

    <string name="pilih_bahasa">Select a language</string>
    <string name="sesuaikan_bahasa_anda">Customize your language</string>
    <string name="gambar_pilih_bahasa">Gambar Pilih Bahasa</string>
    <string name="right">Right</string>

    <string name="gambar_welcome">Image Welcome</string>

    <string name="no_add_image">There is no attached file, please attach a picture first</string>
    <string name="field_empty">Field can\'t be empty</string>

    <string name="save_locations">Saved Locations</string>
    <string name="locations_not_found">Location Not Found</string>
    <string name="map_page_title">Story Maps User</string>
    <string name="story_detail_title">Story Detail</string>
    <string name="turn_on_location">Please Turn On Location</string>
    <string name="no_permission">Not Getting Permission</string>
    <string name="created_add">Created at %1$s</string>

    <!-- Loading Item -->
    <string name="message_error">Timeout</string>
    <string name="btn_muat_ulang">Retry</string>

</resources>